--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,3 +9,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Generate markdown file
         uses: ./
+      - uses: stefanzweifel/git-auto-commit-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          commit_message: Update generated contributors markdown
+          branch: master
