--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,10 @@ inputs:
     description: 'Path of contributors file'
     required: true
     default: 'contributors.json'
+  template_path:
+    description: 'Path of template file'
+    required: true
+    default: 'templates/basic.liquid'
   output_path:
     description: 'Path of contributors generated file'
     required: true
